* Added function "poly.regression" for smoothing data in time-series and imputing missing (NA) values using polynomial regression
* Added function "sg.smooth" for smoothing time-series data using a Savitzky-Golay filter 
* Added function "subsample.distance" - Minimum, and optional maximum, distance constrained sub-sampling 

spatialEco_1.2-0
=================
* Modified function "curvature" to clarify output
* Fixed bug in "sp.kde" so that coordinates are parsed correctly
* Fixed introduced bug in "stratified.random" 
* Fixed bug in "bearing.distance"
* Added function "kendall" and modified raster.kendall to call it 
* Added function "raster.change" for change detection between two rasters
* Added function "topo.distance" for evaluating topographically correct distance
* Added function "focal.lmetrics" for calculating moving window landscape metrics
* Added function "sample.distance" for distance lagged sampling
* Added function "wt.centroids" Creates centroid of [x,y] coordinates based on a weights field
* Added function "subsample.distance" Minimum, and optional maximum, distance constrained sub-sampling

spatialEco_1.2-1
=================
* Added function "parse.bits" for pulling value(s) for a bit(s) based on integer value 
* Added function "annulus.matrix" creates a [0,1] matrix based on defined annulus parameters.  
* Bug fix to "trasp" Missing parenthesis, thanks to Monika Anna Tomaszewska for reporting this mistake.
* Added function "knn" to find nearest neighbors between two spatial objects, with optional search radius

spatialEco_1.2-2
=================
* Added function "spatial.select" to perform a selection (subset) of a feature class based on a polygon(s) feature
* Feature Enhancement "knn" expanded to accept "weights" or covariates for multivariate case
* Fixed bug "sp.ked" Error with defined extent in newdata
* Feature Enhancement "sp.ked" added row (nr) and column (nc) dimension arguments, replacing n. 