@@ -134,3 +134,4 @@ spatialEco_1.2-2
 * Feature Enhancement "knn" expanded to accept "weights" or covariates for multivariate case
 * Fixed bug "sp.ked" Error with defined extent in newdata
 * Feature Enhancement "sp.ked" added row (nr) and column (nc) dimension arguments, replacing n. 
+* Enhancement to "zonal.stats" leveraging velox extract speed
